02/06/07 Julien Dutheil
* Node/Branch properties are passed as references.
* Bootstrap values computation in TreeTools.
* New constructor in PGMA to chose between U/W PGMA.
* New MRP super-tree function.

29/05/07 Julien Dutheil
* Optimization improved, with new options.

07/05/07 Julien Dutheil
* New method 'buildDistanceTree' in OptimizationTools, with iterative
  estimation procedure of Ninio et al 2007.

13/04/07 Julien Dutheil
* New parametrization in ClockTreeLikelihood.
* Optimizers improved.
* TreeLikelihood interface a little bit modified for compatibility with NumCalc.

07/04/07 Benoît Nabholz and Julien Dutheil
* New ClockTreeLikelihood class.
* New NNIHomogeneousTreeLikelihood class, splitted appart from DRHomogeneousTreeLikelihood.
* DRHomogeneousTreeLikelihood a little bit improved (derivatives computation).
* New method initialize() in TreeLikelihood classes.

03/04/07 Julien Dutheil
* VIRTUAL_COV variable changed to NO_VIRTUAL_COV. configure.ac file updated.
  => Default behaviour is now /really/ to use covariant return type with
	virtual inheritence, even when importing the files in an IDE. To use the old
	compilers behaviour, one must set the NO_VIRTUAL_COV preproc variable.
* Several useless 'VIRTUAL_COV' test removed.
* A few more virtual inheritences removed for optimization sake. 
* setMinimumBranchLength now reinitializes only the branch lengths parameters.

02/04/07 Nicolas Galtier
* Bug fixed in TreeTemplate assignment operator.

06/03/07 Julien Dutheil
* New Id gestion in TreeTemplate.
  New tools to deal with ids in TreeTools and TreeTemplateTools.

03/03/07 Julien Dutheil
* Bug fixed in simulation with continuous rate (no more exception thrown for
  duplicate site position).

22/02/07 Julien Dutheil
* Distance estimation now works properly with
MarkovModulatedSubstitutionModel.

17/02/07 Julien Dutheil
* New (string,string) operator in DistanceMatrix.